# RankBorderedWords

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/rank_unrank/: base.py  bench-perfplot.py  bench.py  rank_fast.py  rank_fast_subproblems.py  rank_ub.py  texts.py  tool.py
src/tests/: test_rankers.py  test_subproblems.py  test_texts.py
